# cartographie-fonds-publics

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.conductor/: settings.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source_issue.yml  feature_request.yml
.github/workflows/: ci.yml  data-refresh.yml  web-ci.yml
data/attributions/: README.md  ministres.yaml
data/crosswalk/: README.md  ministeres.yaml  missions.yaml  operateurs.yaml
data/mentions/: cour_des_comptes.yaml  cour_des_comptes_reports.yaml
data/registry/: sources-registry.yaml
data/schemas/: decp-consolidated-tabular.table-schema.json
design/: Cartographie des Fonds Publics.html  README.md
design/css/: app.css  dsfr.css  tokens.css
design/js/: app.jsx  components.jsx  data.js  graph.jsx  icons.jsx  sankey.jsx  screen-donnees.jsx  screen-fiche.jsx  screen-graph.jsx  screen-home.jsx  screen-recherche.jsx  shell.jsx  util.js
docs/: perf-graph-sankey.md  phase0-siren-match-results.md  phase0_5-operator-resolution-results.md  rgaa-conformance.md
docs/adr/: 0001-record-architecture-decisions.md  0002-postgresql-service-backed.md  0003-registry-driven-ingestion.md  (+4 more)
scripts/: conductor-setup.sh
supabase/: README.md  config.toml  demo_seed.sql  seed.sql
(+33 files in other folders)
